- [MODIFIED] Initial setup process / support for users without libraries improved (thanks Sp@ceboy)
- [NEW] Skin option - 'start music visualisation on playback' (thanks WilderKaiser)
- [MODIFIED] Title overlay removed from slideshow in pictures section (thanks ReDraw)
- [NEW] Music fullscreen now handles the stopping of playback cleanly (no more 'press back')

[B]1.2.0[/B]
- [NEW] Italian Translation (thanks Shiba89)
- [MODIFIED] Info dialogs reworked to minimise incidence of overlapping
- [BUGFIX] Problem with RCB plugin launch from homescreen fixed (thanks fipm)
- [MODIFIED] New skin option 'Low CPU power mode' disables scrolling and fanart animations for devices like Raspberry PI (thanks jbman)
- [NEW] Star rating for music tracks on fullscreen music view (thanks geogiraux) Use left or right to increase / decrease rating (when navigation bar is hidden)
- [NEW] Skin option: Hide all background imagery in fullscreen music view
- [FIXED] broken text alignment in RCB dialogs
- [NEW] Dialog skinning for RCB complete
- [FIXED] Video navigation window not rendering correctly on video playback (thanks _omega)
- [FIXED] Custom startup windows now honoured correctly (thanks berkhornet)
- [REVERTED] Recent items returned to using skin-widgets addon as supporting script. Movies and tvshows in separate lists.

[B]1.1.1[/B]
- [BUGFIX] default focussed item fixed for certain select dialogs (blu-ray, subtitles etc)
- [UPDATED] Additional toggle options added for the addon browser
- [NEW] Hebrew translation (thanks dhead666)
- [CHANGED] Fullscreen music screen now autohides player controls. Extra fade animations now used to reduce potential for plasma screen burn problems (more work probably required to refine)
- [UPDATED] Code cleaning (thanks andreineculau)
- [NEW] Basic font support for CJK languages
- [UPDATED] French language translation (thanks geogiraux)
- [UPDATED] XBMC strings in translations files renamed properly to Kodi (thanks geogiraux)