@@ -9,70 +9,77 @@
             <control type="image">
                 <posx>0</posx>
                 <posy>0</posy>
-                <width>588</width>
+                <width>col-9-begin</width>
                 <height>fullscreenHeight</height>
                 <aspectratio>stretch</aspectratio>
                 <texture>colors/black.png</texture>
                 <bordersize>0</bordersize>
                 <colordiffuse>99FFFFFF</colordiffuse>
             </control>
-            <control type="label">
-                <posx>24</posx>
-                <posy>1-row</posy>
-                <width>7-col</width>
-                <font>regularStrong</font>
-                <textcolor>selected</textcolor>
-                <shadowcolor>-</shadowcolor>
-                <label>[UPPERCASE]$INFO[VideoPlayer.ChannelGroup][/UPPERCASE]</label>
-            </control>
             <control type="list" id="11">
-                <posx>0</posx>
-                <posy>140</posy>
-                <width>8-col</width>
-                <height>16-row</height>
-                <onleft>PreviousChannelGroup</onleft>
+                <posx>6</posx>
+                <posy>42</posy>
+                <width>9-col</width>
+                <height>18-row</height>
                 <onright>60</onright>
-                <ondown>50</ondown>
-                <onup>50</onup>
+                <ondown>11</ondown>
+                <onleft>dialog.close(all,true)</onleft>
+                <onup>11</onup>
                 <pagecontrol>60</pagecontrol>
                 <scrolltime tween="sine" easing="inout">300</scrolltime>
-                <itemlayout width="8-col" height="2-row">
+                <itemlayout width="9-col" height="2-row">
+                    <control type="image">
+                        <posx>20</posx>
+                        <posy>32</posy>
+                        <width>1-row</width>
+                        <height>1-row</height>
+                        <aspectratio scalediffuse="false">scale</aspectratio>
+                        <texture fallback="colors/offblack.png" diffuse="masks/circle.png" border="0">$INFO[Listitem.thumb]</texture>
+                    </control>
                     <control type="label">
-                        <posx>24</posx>
+                        <posx>108</posx>
                         <posy>12</posy>
-                        <width>7-col</width>
+                        <width>8-col-gutter</width>
                         <font>itemTitle</font>
                         <textcolor>selected</textcolor>
                         <shadowcolor>-</shadowcolor>
                         <label>$INFO[ListItem.Label]: $INFO[ListItem.Title]</label>
                     </control>
                     <control type="label">
-                        <posx>24</posx>
+                        <posx>108</posx>
                         <posy>69</posy>
-                        <width>7-col</width>
+                        <width>8-col-gutter</width>
                         <font>smallStrong</font>
                         <align>left</align>
                         <height>24</height>
                         <textcolor>selected</textcolor>
                         <shadowcolor>-</shadowcolor>
-                        <label>$LOCALIZE[19031]: $INFO[ListItem.nextstarttime] - $INFO[ListItem.nextTitle]</label>
+                        <label>[B]$LOCALIZE[19031]: $INFO[ListItem.nextstarttime][/B] - $INFO[ListItem.nextTitle]</label>
                     </control>
                 </itemlayout>
-                <focusedlayout width="8-col" height="2-row">
+                <focusedlayout width="9-col" height="2-row">
                     <control type="image">
-                        <posx>0</posx>
+                        <posx>col-1-begin</posx>
                         <posy>0</posy>
-                        <width>8-col</width>
+                        <width>588</width>
                         <height>2-row</height>
                         <aspectratio>stretch</aspectratio>
                         <texture>colors/selected.png</texture>
                         <bordersize>0</bordersize>
                         <colordiffuse>ffFFFFFF</colordiffuse>
                     </control>
+                    <control type="image">
+                        <posx>20</posx>
+                        <posy>32</posy>
+                        <width>1-row</width>
+                        <height>1-row</height>
+                        <aspectratio scalediffuse="false">scale</aspectratio>
+                        <texture fallback="colors/offblack.png" diffuse="masks/circle.png" border="0">$INFO[Listitem.thumb]</texture>
+                    </control>
                     <control type="label">
-                        <posx>24</posx>
+                        <posx>108</posx>
                         <posy>12</posy>
-                        <width>7-col</width>
+                        <width>528</width>
                         <font>itemTitle</font>
                         <textcolor>black</textcolor>
                         <selectedcolor>black</selectedcolor>
@@ -80,16 +87,16 @@
                         <label>$INFO[ListItem.Label]: $INFO[ListItem.Title]</label>
                     </control>
                     <control type="label">
-                        <posx>24</posx>
+                        <posx>108</posx>
                         <posy>69</posy>
-                        <width>7-col</width>
+                        <width>528</width>
                         <font>smallStrong</font>
                         <align>left</align>
                         <height>24</height>
                         <textcolor>black</textcolor>
                         <selectedcolor>black</selectedcolor>
                         <shadowcolor>-</shadowcolor>
-                        <label>$LOCALIZE[19031]: $INFO[ListItem.nextstarttime] - $INFO[ListItem.nextTitle]</label>
+                        <label>[B]$LOCALIZE[19031]: $INFO[ListItem.nextstarttime][/B] - $INFO[ListItem.nextTitle]</label>
                     </control>
                 </focusedlayout>
             </control>
@@ -98,7 +105,7 @@
                 <visible>Control.IsVisible(60)</visible>
                 <animation effect="fade" start="100" end="70" time="100" condition="!controlgroup(8000).hasfocus">conditional</animation>
                 <control type="scrollbar" id="60">
-                    <posx>588</posx>
+                    <posx>672</posx>
                     <posy>0</posy>
                     <height>fullscreenHeight</height>
                     <onleft>11</onleft>
