@@ -5,13 +5,13 @@
     <controls>
         <control type="group">
             <!--fade out if audio / video menu active-->
-            <animation type="Conditional" condition="Window.IsActive(osdvideosettings) | Window.IsActive(osdaudiosettings)">
+            <animation type="Conditional" condition="Window.IsActive(osdvideosettings) | Window.IsActive(osdaudiosettings) | window.isactive(PVROSDChannels)">
                 <effect type="fade" start="100" end="0" time="200" tween="sine" easing="in"/>
             </animation>
             <!--title info-->
             <control type="group">
                 <posx>col-1-begin</posx>
-                <posy>881</posy>
+                <posy>882</posy>
                 <!--overlay-->
                 <control type="image">
                     <posx>-96</posx>
@@ -81,38 +81,26 @@
                     <aspectratio>stretch</aspectratio>
                 </control>
                 <control type="image">
-                    <posx>1679</posx>
+                    <posx>722</posx>
                     <posy>28</posy>
-                    <width>4-col</width>
+                    <width>237</width>
                     <height>54</height>
                     <texture>colors/black.png</texture>
                     <colordiffuse>ccffffff</colordiffuse>
                     <aspectratio>stretch</aspectratio>
                 </control>
                 <control type="image">
-                    <visible>!Player.CanRecord</visible>
-                    <posx>526</posx>
+                    <posx>1824</posx>
                     <posy>28</posy>
-                    <width>69</width>
+                    <width>2-col</width>
                     <height>54</height>
                     <texture>colors/black.png</texture>
                     <colordiffuse>ccffffff</colordiffuse>
                     <aspectratio>stretch</aspectratio>
                 </control>
-                <control type="label">
-                    <visible>!Player.CanRecord</visible>
-                    <posx>550</posx>
-                    <posy>20</posy>
-                    <width>1-col</width>
-                    <height>1-col</height>
-                    <font>symbol</font>
-                    <textcolor>unselected</textcolor>
-                    <shadowcolor>-</shadowcolor>
-                    <label></label>
-                </control>
                 <!--player controls-->
                 <control type="list" id="8000">
-                    <posx>75</posx>
+                    <posx>73</posx>
                     <posy>10</posy>
                     <width>24-col</width>
                     <height>1-col</height>
@@ -120,7 +108,7 @@
                     <orientation>horizontal</orientation>
                     <onright>control.setfocus(8001,0)</onright>
                     <onleft>control.setfocus(8001,4)</onleft>
-                    <itemlayout width="1-col" height="1-col">
+                    <itemlayout width="70" height="1-col">
                         <control type="image">
                             <posx>19</posx>
                             <posy>18</posy>
@@ -142,7 +130,7 @@
                             <label>$INFO[ListItem.label]</label>
                         </control>
                     </itemlayout>
-                    <focusedlayout width="1-col" height="1-col">
+                    <focusedlayout width="70" height="1-col">
                         <control type="image">
                             <visible>control.hasfocus(8000)</visible>
                             <posx>19</posx>
@@ -189,6 +177,13 @@
                         </control>
                     </focusedlayout>
                     <content>
+                        <item>
+                            <description>Menu: EPG (PVR content) / DVD Menu (Disc playback in progress)</description>
+                            <label></label>
+                            <thumb>-</thumb>
+                            <onclick condition="System.HasMediaDVD + !Pvr.IsPlayingTv">PlayerControl(ShowVideoMenu)</onclick>
+                            <onclick condition="Pvr.IsPlayingTv">ActivateWindow(PVROSDChannels)</onclick>
+                        </item>
                         <item>
                             <description>Previous</description>
                             <label></label>
@@ -234,17 +229,25 @@
                             <onclick>PlayerControl(next)</onclick>
                         </item>
                         <item>
-                            <visible>System.GetBool(pvrmanager.enabled) + Player.CanRecord</visible>
+                            <enable>System.GetBool(pvrmanager.enabled) + Player.CanRecord</enable>
                             <description>Record (PVR only)</description>
                             <label></label>
                             <thumb>-</thumb>
                             <onclick>PlayerControl(record)</onclick>
                         </item>
+                        <item>
+                            <enable></enable>
+                            <description>Teletext</description>
+                            <label></label>
+                            <thumb>-</thumb>
+                            <onclick>ActivateWindow(Teletext)</onclick>
+                        </item>
                     </content>
                 </control>
                 <!--subtitles etc-->
                 <control type="list" id="8001">
-                    <posx>599</posx>
+                    <visible>true</visible>
+                    <posx>col-13-begin</posx>
                     <posy>28</posy>
                     <width>24-col</width>
                     <height>1-col</height>
@@ -256,7 +259,7 @@
                         <control type="image">
                             <posx>0</posx>
                             <posy>0</posy>
-                            <width>213</width>
+                            <width>215</width>
                             <height>54</height>
                             <aspectratio scalediffuse="false">stretch</aspectratio>
                             <texture border="0">colors/black.png</texture>
@@ -267,7 +270,7 @@
                             <posx>12</posx>
                             <posy>0</posy>
                             <width>184</width>
-                            <align>left</align>
+                            <align>center</align>
                             <font>menuTitle</font>
                             <textcolor>selected</textcolor>
                             <label>$INFO[ListItem.label]</label>
@@ -279,7 +282,7 @@
                             <visible>control.hasfocus(8001)</visible>
                             <posx>0</posx>
                             <posy>0</posy>
-                            <width>213</width>
+                            <width>215</width>
                             <height>54</height>
                             <aspectratio scalediffuse="false">stretch</aspectratio>
                             <texture border="0">colors/selected.png</texture>
@@ -302,7 +305,7 @@
                             <posx>12</posx>
                             <posy>0</posy>
                             <width>184</width>
-                            <align>left</align>
+                            <align>center</align>
                             <font>menuTitle</font>
                             <textcolor>black</textcolor>
                             <label>$INFO[ListItem.label]</label>
@@ -313,7 +316,7 @@
                             <posx>12</posx>
                             <posy>0</posy>
                             <width>184</width>
-                            <align>left</align>
+                            <align>center</align>
                             <font>menuTitle</font>
                             <textcolor>selected</textcolor>
                             <label>$INFO[ListItem.label]</label>
@@ -321,12 +324,6 @@
                         </control>
                     </focusedlayout>
                     <content>
-                        <item>
-                            <description>DVD Menu</description>
-                            <label>31140</label>
-                            <thumb>-</thumb>
-                            <onclick>PlayerControl(ShowVideoMenu)</onclick>
-                        </item>
                         <item>
                             <description>Subtitles</description>
                             <label>24012</label>
